Use package lock and switch to base image juptyer/minimal-notebook.

--- a/dockerfiles/r-stat-301/Dockerfile
+++ b/dockerfiles/r-stat-301/Dockerfile
@@ -1,13 +1,24 @@
 # Copyright (c) UBC-DSCI Development Team. 
 # Distributed under the terms of the Modified BSD License.
-FROM jupyter/r-notebook
+FROM jupyter/minimal-notebook
 
-LABEL maintainer="Tiffany Timbers <tiffany.timbers@gmail.com>"
+LABEL maintainer="Brian Kim <brian.kim@stat.ubc.ca>"
+
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 USER root
 
-# install vim
-RUN apt-get update && apt-get install -y vim
+# R pre-requisites
+RUN apt-get update --yes && \
+    apt-get install --yes --no-install-recommends \
+    fonts-dejavu \
+    unixodbc \
+    unixodbc-dev \
+    r-cran-rodbc \
+    gfortran \
+    gcc \
+    vim && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
 USER ${NB_UID}
 
@@ -16,51 +27,20 @@ WORKDIR "${HOME}"
 # remove the "work/" directory added in an earlier layer...
 RUN rm -rf work
 
-# Install R packages
-RUN mamba install --quiet --yes \
-    'r-cowplot' \
-    'r-ggally' \
-    'r-gridextra' \
-    'r-infer' \
-    'r-kknn' \
-    'r-testthat' \
-    'r-rpostgres' \
-    'r-janitor' \
-    'r-mltools' \
-    'r-leaps' \
-    'r-faraway' \
-    'r-glmnet' \
-    'r-titanic' \
-    'r-performance' \
-    'r-binom' \
-    'r-gridgraphics' \
-    'r-aer' \
-    'r-latex2exp' \
-    'r-gsdesign' \
-    'r-car' \
-    'r-cardata' \
-    'r-mlbench' \
-    'r-qqplotr' \
-    'r-see' \
-    'r-boot' \
-    'r-caret' \
-    && mamba clean --all -f -y \
-    && fix-permissions "${CONDA_DIR}" \
-    && fix-permissions "/home/${NB_USER}" \
-    && Rscript -e "remotes::install_github('allisonhorst/palmerpenguins@v0.1.0')" \
-    && Rscript -e "install.packages('faux', repos='http://cran.us.r-project.org')" \
-    && Rscript -e "install.packages('contextual', repos='http://cran.us.r-project.org')" \
-    && Rscript -e "install.packages('ISLR', repos='http://cran.us.r-project.org')" \
-    && Rscript -e "install.packages('ISLR2', repos='http://cran.us.r-project.org')" \
-    && Rscript -e "install.packages('glmbb', repos='http://cran.us.r-project.org')"
+COPY conda-linux-64.lock /tmp/conda-linux-64.lock
+RUN mamba update --quiet --file /tmp/conda-linux-64.lock && \
+  mamba clean --all -y -f && \
+  fix-permissions "${CONDA_DIR}" && \
+  fix-permissions "/home/${NB_USER}" && \
+  Rscript -e "remotes::install_github('allisonhorst/palmerpenguins@v0.1.0')" && \
+  Rscript -e "install.packages('faux', repos='http://cran.us.r-project.org')" && \
+  Rscript -e "install.packages('contextual', repos='http://cran.us.r-project.org')" && \
+  Rscript -e "install.packages('ISLR', repos='http://cran.us.r-project.org')" && \
+  Rscript -e "install.packages('ISLR2', repos='http://cran.us.r-project.org')" && \
+  Rscript -e "install.packages('glmbb', repos='http://cran.us.r-project.org')"
 
 # Install nbgitpuller, jupytext, jlab-git
-RUN pip install git+https://github.com/data-8/nbgitpuller@c23461d4f7ce47ec4e0d2bcfc3b2fde4939b80f8 \
-  && jupyter serverextension enable --sys-prefix nbgitpuller \
-  && pip install jupyterlab-git \
-  && pip install jupytext --upgrade \
-  && jupyter labextension install @techrah/text-shortcuts \
-  && jupyter lab build
+RUN jupyter labextension install @techrah/text-shortcuts
   
 # Install the extension to remove the shift+M merge shortcut
 RUN mkdir -p /home/${NB_USER}/.jupyter/lab/user-settings/\@jupyterlab/shortcuts-extension
