--- a/dockerfiles/r-stat-301/Dockerfile
+++ b/dockerfiles/r-stat-301/Dockerfile
@@ -42,3 +42,7 @@ RUN mamba update --quiet --file /tmp/conda-linux-64.lock && \
 # Configure shortcuts-extension to remove Shift-M cell merge shortcut
 COPY shortcuts.jupyterlab-settings /home/${NB_USER}/.jupyter/lab/user-settings/\@jupyterlab/shortcuts-extension/shortcuts.jupyterlab-settings
 
+# Make sure everything in the home folder is owned by NB_USER
+USER root
+RUN chown -R ${NB_USER} /home/${NB_USER}
+USER ${NB_UID}
