Move some Rscript installed packages into environment.yml. Available on condaforge and r channels.

--- a/dockerfiles/r-stat-301/Dockerfile
+++ b/dockerfiles/r-stat-301/Dockerfile
@@ -28,16 +28,13 @@ WORKDIR "${HOME}"
 RUN rm -rf work
 
 COPY conda-linux-64.lock /tmp/conda-linux-64.lock
+
 RUN mamba update --quiet --file /tmp/conda-linux-64.lock && \
   mamba clean --all -y -f && \
   fix-permissions "${CONDA_DIR}" && \
   fix-permissions "/home/${NB_USER}" && \
-  Rscript -e "remotes::install_github('allisonhorst/palmerpenguins@v0.1.0')" && \
   Rscript -e "install.packages('faux', repos='http://cran.us.r-project.org')" && \
-  Rscript -e "install.packages('contextual', repos='http://cran.us.r-project.org')" && \
-  Rscript -e "install.packages('ISLR', repos='http://cran.us.r-project.org')" && \
-  Rscript -e "install.packages('ISLR2', repos='http://cran.us.r-project.org')" && \
-  Rscript -e "install.packages('glmbb', repos='http://cran.us.r-project.org')"
+  Rscript -e "install.packages('contextual', repos='http://cran.us.r-project.org')" 
 
 # Configure shortcuts-extension to remove Shift-M cell merge shortcut
 COPY shortcuts.jupyterlab-settings /home/${NB_USER}/.jupyter/lab/user-settings/\@jupyterlab/shortcuts-extension/shortcuts.jupyterlab-settings
