Add jupyterlab-git, jupytext, nbgitpuller to environment.yml, new lockfile.

--- a/dockerfiles/r-stat-301/environment.yml
+++ b/dockerfiles/r-stat-301/environment.yml
@@ -4,6 +4,9 @@ channels:
  - r 
  - nodefaults
 dependencies:
+  - jupyterlab-git
+  - jupytext
+  - nbgitpuller
   - r-aer 
   - r-base 
   - r-binom 
