--- a/dockerfiles/r-stat-301/Dockerfile
+++ b/dockerfiles/r-stat-301/Dockerfile
@@ -33,7 +33,7 @@ RUN mamba update --quiet --file /tmp/conda-linux-64.lock && \
   mamba clean --all -y -f && \
   fix-permissions "${CONDA_DIR}" && \
   fix-permissions "/home/${NB_USER}" && \
-  Rscript -e "install.packages('faux', repos='http://cran.us.r-project.org')" && \
+  Rscript -e "install.packages('faux', repos='http://cran.us.r-project.org')"
 
 # Configure shortcuts-extension to remove Shift-M cell merge shortcut
 COPY shortcuts.jupyterlab-settings /home/${NB_USER}/.jupyter/lab/user-settings/\@jupyterlab/shortcuts-extension/shortcuts.jupyterlab-settings
