Update github workflow, point to testing dockerhub repo.

--- a/.github/workflows/publish_docker_images.yml
+++ b/.github/workflows/publish_docker_images.yml
@@ -7,12 +7,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions: 
+      contents: write
     steps:
     - uses: actions/checkout@v3
       with:
         fetch-depth: '0'
+        ref: dockerfile_updates # TODO: Testing purposes only, change to main.
     - name: Bump version and push tag
-      uses: anothrNick/github-tag-action@1.36.0
+      uses: anothrNick/github-tag-action@1.67.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         WITH_V: true
@@ -32,17 +35,17 @@ jobs:
         draft: false
         prerelease: false
     - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@v4
+      uses: elgohr/Publish-Docker-Github-Action@v5
       with:
-        name: ubcdsci/r-stat-301
+        name: brianki/r-stat-301-student-test # TODO: Testing purposes only, change to ubcdsci/r-stat-301
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         workdir: dockerfiles/r-stat-301
         tags: "latest,${{ steps.bump.outputs.new_tag }}"
     - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@v4
+      uses: elgohr/Publish-Docker-Github-Action@v5
       with:
-        name: ubcdsci/r-stat-301-grading
+        name: ubcdsci/r-stat-301-instructor-test # TODO: Testing purposes only, change to ubcdsci/r-stat-301-grading
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
         workdir: dockerfiles/r-stat-301-grading
