Pin r-stringi to 1.7.12 to fix stringr issue with tidyverse,latex2exp,caret.

--- a/dockerfiles/r-stat-301/environment.yml
+++ b/dockerfiles/r-stat-301/environment.yml
@@ -51,7 +51,8 @@ dependencies:
   - r-rpostgres 
   - r-rsqlite 
   - r-see 
-  - r-shiny 
+  - r-shiny
+  - r-stringi=1.7.12
   - r-testthat 
   - r-tidymodels 
   - r-tidyverse 
